Added support for DS18B20 node

--- a/src/main/resources/gpio-config.json.example
+++ b/src/main/resources/gpio-config.json.example
@@ -1,32 +1,12 @@
 {
     "inputs": [
         {
-            "pin": 0,
-            "name": "MyDigitalInput",
-            "type": "digital",
-            "resistance": "pull-down"
-        },
-        {
-            "pin": 1,
-            "name": "MyAnalogInput",
-            "type": "analog"
+            "pin": 4,
+            "name": "temp",
+            "type": "w1",
         }
     ],
-
-    "outputs": [
-        {
-            "pin": 2,
-            "name": "MyDigitalOutput",
-            "type": "digital",
-            "value": 0
-        },
-        {
-            "pin": 3,
-            "name": "MyAnalogOutput",
-            "type": "analog",
-            "value": 0.0
-        }
-    ]
+    "outputs": []
 }
 
 
