Fixed JSON syntax error in new example config

--- a/src/main/resources/gpio-config.json.example
+++ b/src/main/resources/gpio-config.json.example
@@ -3,7 +3,7 @@
         {
             "pin": 4,
             "name": "temp",
-            "type": "w1",
+            "type": "w1"
         }
     ],
     "outputs": []
